# grounding-dino-yolov8-openlogo-distill

./: .gitignore  .gitmodules  README.md  pyproject.toml
comparison_results/: comparison_table.md  results.json
dataset/: .gitignore  README.md
flutter_app/: main.dart  pubspec.yaml
flutter_app/android/: gradle.properties  settings.gradle
flutter_app/android/app/: build.gradle
flutter_app/lib/models/: models.dart
flutter_app/lib/presentation/controllers/: camera_inference_controller.dart
flutter_app/lib/presentation/screens/: camera_inference_screen.dart  single_image_screen.dart
flutter_app/lib/presentation/widgets/: camera_inference_content.dart
scripts/: compare_models.py  convert_tflite.py  train.py
scripts/config/: config_gdino.py  config_human_labels.py  config_supervisor.py  dataset_gdino.yaml  dataset_supervisor.yaml
utils/: data_converter.py
